# docs/swagger.json
@@ -254,6 +254,25 @@
                     }
                 }
             }
+        },
+        "/ws/{id}": {
+            "get": {
+                "description": "Establishes a WebSocket connection to receive real-time updates for a specific crawl job",
+                "tags": [
+                    "websocket"
+                ],
+                "summary": "Connect to live crawl updates",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Job ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
